# server-monitoring

./: .codacy.yml  .dockerignore  .env.sample  .env.test  .gitignore  .gitmodules  .pre-commit-config.yaml  .scrutinizer.yml  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  TESTING_INDEX.md  TEST_STRATEGY_SUMMARY.md  agents.md  install.sh  main.py  manage.py  pyproject.toml
.claude/plans/: notify-template-compliance.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  format.yml  lint.yml  pages.yml  security.yml
apps/alerts/: README.md  admin.py  agents.md  check_integration.py  models.py  services.py  tasks.py  tests.py  urls.py  views.py
apps/alerts/_tests/: test_admin.py  test_check_integration.py  test_models.py  test_services.py  (+2 more)
apps/checkers/: README.md  admin.py  agents.md  apps.py  checks.py  models.py  tests.py
apps/intelligence/: README.md  admin.py  agents.md  models.py  tests.py  urls.py  views.py
apps/notify/: AGENTS.md  README.md  admin.py  agents.md  models.py  services.py  templating.py  urls.py  views.py
apps/observability/: AGENTS.md  admin.py  apps.py  checks.py  context.py  formatter.py  heartbeat.py  heartbeat_reader.py  heartbeat_registry.py  log_reader.py  models.py
apps/orchestration/: AGENTS.md  README.md  __init__.py  admin.py  agents.md  apps.py  definition_orchestrator.py  dtos.py  executors.py  formatters.py  models.py  orchestrator.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
config/: __init__.py  admin.py  apps.py  asgi.py  celery.py  checks.py  dashboard.py  env.py  models.py  settings.py  urls.py  wsgi.py
config/_tests/: test_admin.py  test_api_key_admin.py  test_api_key_auth_middleware.py  test_api_key_model.py  test_celery_signals.py  test_checks.py  test_dashboard.py  test_entrypoints.py  test_env.py  test_logging_config.py  test_observability_middleware.py  test_rate_limit_middleware.py  test_settings.py
config/middleware/: api_key_auth.py  constants.py  observability.py  rate_limit.py
config/migrations/: 0001_initial.py  0002_hashed_api_key.py  0003_apikey_owner_instance_id.py
config/security/: __init__.py  http.py  path_traversal.py  url_validation.py
deploy/docker/: Dockerfile  docker-compose.yml  nginx.conf
deploy/systemd/: server-monitoring-celery.service  server-monitoring.service
docs/: Architecture.md  Deployment.md  Index.md  Installation.md  Logging.md  Security.md  Setup-Guide.md  Templates.md  _config.yml  orchestration-pipelines.md
docs/plans/: 2026-01-26-checkers-test-restructure.md  2026-01-26-notify-test-restructure.md  2026-01-28-intelligence-restructure.md  2026-01-29-reusable-pipelines.md  2026-02-02-run-pipeline-definitions-design.md  2026-02-02-run-pipeline-definitions-impl.md  2026-02-03-sample-pipeline-definitions.md  2026-02-06-progress-messages-design.md  2026-02-06-spinner-progress-design.md  2026-02-09-interactive-cli-design.md  2026-02-10-alerts-test-restructure.md  2026-02-10-orchestration-test-restructure.md  2026-02-11-disk-analysis-checkers.md  2026-02-13-admin-ops-console-design.md  2026-02-14-admin-ops-console-impl.md  2026-02-15-json-widget-design.md  2026-02-15-json-widget-impl.md  2026-02-15-readme-badges-design.md  2026-02-15-readme-badges-impl.md  2026-02-16-analysisrun-audit-logging-design.md  2026-02-16-analysisrun-audit-logging-impl.md  2026-02-17-cpu-multi-sample-design.md  2026-02-17-cpu-multi-sample-impl.md  2026-02-18-architecture-docs-design.md  2026-02-18-architecture-docs-impl.md  2026-02-18-cli-aliases-design.md  2026-02-18-cli-aliases-impl.md  2026-02-19-setup-instance-design.md  2026-02-19-setup-instance-impl.md  2026-02-22-node-handlers-docs-design.md  2026-02-22-node-handlers-docs-impl.md  2026-02-22-real-node-handlers-design.md  2026-02-23-install-aliases-design.md  2026-02-23-installation-docs-design.md  2026-02-25-intelligence-providers-design.md  2026-02-25-intelligence-providers-impl.md  2026-03-01-interactive-test-notify-design.md  2026-03-01-interactive-test-notify-impl.md  2026-03-01-pipeline-inspector-design.md  2026-03-01-pipeline-inspector-impl.md  (+92 more)
templates/admin/: dashboard.html
(+257 files in other folders)
