[project]
name = "server-maintanence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.6.2",
    "coverage>=7.13.1",
    "django>=5.2.10",
    "openai>=1.0.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.1",
    "redis>=7.1.0",
    "jinja2>=3.1.2",
    "django-object-actions>=4.3.0",
    "django-json-widget>=2.0.1",
]

[project.optional-dependencies]
# AI provider SDKs — install with: uv sync --extra ai
# Each SDK is guarded by a try/except ImportError in the provider registry,
# so only the SDKs you install are available as active providers.
ai = [
    "anthropic>=0.84.0",
    "google-genai>=1.64.0",
    "ollama>=0.6.1",
    "mistralai>=1.12.4",
]
# Dev tooling (format, lint, tests, typing)
dev = [
    "anthropic>=0.84.0",
    "google-genai>=1.64.0",
    "ollama>=0.6.1",
    "mistralai>=1.12.4",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "django-stubs>=5.0.0",
    "types-psutil>=5.9.5.20240423",
    "pre-commit>=4.0.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]
# Keep virtualenvs/cache/lock artifacts out of formatting.
exclude = """
/(
    \\.venv
  | venv
  | build
  | dist
  | __pycache__
  | \\.mypy_cache
  | \\.ruff_cache
  | migrations
)/
"""

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  "migrations",
]

[tool.ruff.lint]
# Start small: pyflakes + pycodestyle + import sorting.
select = ["F", "E", "W", "I"]
# Black handles line wrapping; avoid fighting over E501.
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = false
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.coverage.run]
source = ["apps", "config"]
branch = true
omit = [
    "*/migrations/*",
    "*/__pycache__/*",
    "**/tests.py",
    "**/test_*.py",
    "**/tests/**",
    "**/_tests/**",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 0
show_missing = true
skip_covered = false
